--- a/Implementation.html
+++ b/Implementation.html
@@ -1,4 +1,7 @@
 <h3><a href="index.html">Concept</a><a href="Implementation.html">Implementation</a> <a href="Results.html">Results</a> <a href="midtermreport.html">Midterm Report</a></h3>
+<title>
+			Concept
+</title>
 <body>
   <h1>Approach and Implementation</h1>
 
