--- a/Implementation.html
+++ b/Implementation.html
@@ -1,9 +1,7 @@
---
-layout: page
-title: Concept
---
 
-#Implementation and Approach
+<h2><a href="index.html">Concept</a> <a href="midtermreport.html">Midterm Report</a> <a href="Results.html">Results</a>  <a href="Implementation.html">Implementation</a></h2>
+
+<h1>Implementation and Approach</h1>
 
 The immediate issue with training a neural network to extend the boundaries of an image is that it is impossible to feed different sized matrices, or images in our case, into most if not all conventional graph designs. This would mean that all image sizes would need a separate network trained and on top of this you would also need to train each image size with a variety of output sizes to accommodate different filter sizes. Luckily we have Fourier transforms.
 
