Update and rename midtermreport.md to midtermreport.html

--- a/midtermreport.html
+++ b/midtermreport.html
@@ -1,9 +1,6 @@
---
-layout: page
-title: Midterm Report
---
 
-#Midterm Report
+<h2><a href="index.html">Concept</a> <a href="midtermreport.html">Midterm Report</a> <a href="Results.html">Results</a>  <a href="Implementation.html">Implementation</a></h2>
+<h1>Midterm Report</h1>
 
   Photo manipulation is for the sake of improving the quality of an image. When processing an image around its edge pixels all photographic filters encounter the issue of not being able to gather information outside of the photo’s boundaries and, without intervention, will result in a smaller image on the output. Filters are prevalent in many popular social media networks like Instagram and snapchat where shrinking is dependent on filter size and will be less noticeable with larger image sensors; however with non-professional, consumer-facing cameras - such as those used for most social media engagements - a smaller photo can result in the removal of significant features in a photo. The shrinking on professional grade cameras may be insignificant but maintaining consistency across image size and aspect ratio when creating professional work is important. Looking forward, with enough training this project could be used to reduce the cropping in digitally stitched panoramic photos, filling in the pixels without values that result from perspective warping and again maintaining the aspect ratio. This sort of prediction based “hallucinating” could also be used to intelligently remove objects like signs, construction cones, or other visually unattractive subjects in a photo.
 
