--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Image-Expansion</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
   </head>
+<body>
 <div class="toolbar-Concept">
 <h2><a href="index.html">Concept</a> <a href="midtermreport.html">Midterm Report</a> <a href="Results.html">Results</a>  <a href="Implementation.html">Implementation</a> <a href="https://docs.google.com/presentation/d/1-cbVsg1f9plFdEAPed2oDzv_GU6rhc7mlWn1CGluCXA/edit?usp=sharingl">Presentation</a></h2>
 </div>
@@ -24,3 +25,4 @@ Each image will be preprocessed to trim of n-pixels of the image border to creat
 
   Our thought is that a neural network should be able to be trained to accurately account for these edge direction since the information needed to preserve them exists within the image. The hope is that with a good enough training algorithm and large enough training set of images a neural network will begin to pick up on how accurately extend image boundaries.
 
+</body>
