--- a/Implementation.html
+++ b/Implementation.html
@@ -1,7 +1,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Implemtation</title>
+    <title>Implementation</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 <body>
